<project 	xmlns="http://maven.apache.org/POM/4.0.0" 
			xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 >
 	<modelVersion>4.0.0</modelVersion>

	<!-- PARENT INFO -->
	<parent>
		<groupId>org.tedros</groupId>
		<artifactId>tdrs-server</artifactId>
		<version>17-0.0.1</version>
	</parent>
	
	<!-- MODULE INFO -->
  	<artifactId>tedros-server-api</artifactId>
  	<packaging>jar</packaging>

  	<name>tedros-ejb-service-base</name>
  	<description>The tedros base ejb service</description>
  	
  	<!-- PROPERTIES -->
	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<!-- DEPENDENCIES -->
    <dependencies>  
	  	<dependency>
	  		<groupId>org.tedros</groupId>
	  		<artifactId>tedros-server-client-api</artifactId>
	  		<version>17-0.0.1</version>
	  		<scope>compile</scope>
	  	</dependency>
	  	
		<dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi</artifactId>
		    <version>${apache.poi}</version>
		    <scope>provided</scope>
		</dependency>
		
	  	<dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi-ooxml</artifactId>
		    <version>${apache.poi}</version>
		    <scope>provided</scope>
		</dependency>
	  
		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <version>${h2.version}</version>
		    <scope>provided</scope>
		</dependency>
	  
	  	<dependency>
		   	<groupId>org.eclipse.persistence</groupId>
		   	<artifactId>eclipselink</artifactId>
		   	<version>${eclipselink.version}</version>
		   	<scope>provided</scope>
		</dependency>
		
		<dependency>
	      	<groupId>org.apache.tomee</groupId>
	      	<artifactId>jakartaee-api</artifactId>
	      	<version>${javaee.api.version}</version>
	      	<scope>provided</scope>
	    </dependency>
	    
	    <dependency>
	      	<groupId>org.apache.tomee</groupId>
	      	<artifactId>openejb-core</artifactId>
	      	<version>${openejb.version}</version>
	      	<scope>provided</scope>
	    </dependency>
	    
	    <dependency>
	      	<groupId>junit</groupId>
	      	<artifactId>junit</artifactId>
	      	<version>${junit.version}</version>
	    	<scope>test</scope>
	    </dependency>
  	</dependencies>
  	
  	<build>
    	<plugins>
    		<plugin>
			 <groupId>org.apache.maven.plugins</groupId>
			 <artifactId>maven-resources-plugin</artifactId>
			 <version>2.5</version>
			 <configuration>
			   <!-- specify UTF-8, ISO-8859-1 or any other file encoding -->
			   <encoding>UTF-8</encoding>
			 </configuration>
			</plugin>
      		<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-compiler-plugin</artifactId>
        		<version>3.3</version>
        		<configuration>
          			<source>${java.version}</source>
          			<target>${java.version}</target>
        		</configuration>
      		</plugin>
      		<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-source-plugin</artifactId>
		        <version>3.2.1</version>
		        <executions>
		          <execution>
		            <id>attach-sources</id>
		            <phase>verify</phase>
		            <goals>
		              <goal>jar-no-fork</goal>
		            </goals>
		          </execution>
		        </executions>
		      </plugin>
  		</plugins>
  		
  		<resources>
        	<resource>
            	<directory>src/main/resources</directory>
            	<filtering>true</filtering>
            	<includes>
          			<include>**/*.*</include>
        		</includes>
        	</resource>
    	</resources>
  		
 	</build>
 	
 	
 	<distributionManagement>
	   <repository>
	     <id>Tedros-Box</id>
	     <name>GitHub Tedros Apache Maven Packages</name>
	     <url>https://maven.pkg.github.com/tedros-box/package</url>
		 <uniqueVersion>false</uniqueVersion>
	   </repository>
	</distributionManagement>
  
</project>
